@@ -37,7 +37,7 @@
   8bb891214b354f906db82e4b5bf72c6d655562f2 2011091500 mingw32-gcc4.xml
   45978fa489e407f1d15c10b7cdf3e2b62d561ee8 2011102200 mingw32-gdb.xml
   8ba336812b4016c512a3e7239a0948a3a494b6f4 2011101100 mingw32-gendef.xml
-  52d885ebb7542dd7039099b66ef9aa741521cfbd 2011103101 mingw32-gettext.xml
+  52acb28ab502ad281a43efc29af2d5ad798595ce 2011110901 mingw32-gettext.xml
   753225ffa6c00882b8e5aaf0c1be392e75dad30d 2010083100 mingw32-gmp.xml
   0fc48f3538d5fcc3f1e0f74618eba805bc293e8b 2011101100 mingw32-libarchive.xml
   6dcfb028214d55e8bb9e5c3497568e1151040cd3 2011103100 mingw32-libiconv.xml
