@@ -39,12 +39,12 @@
 
       <component class="bin">
         <release tarname="gettext-0.17-1-mingw32-bin.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
           <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
         </release>
         <release tarname="gettext-0.18.1.1-2-mingw32-bin.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
           <requires ge="mingw32-libiconv-1.14-2-mingw32-*-dll-2.tar" />
           <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
         </release>
@@ -62,13 +62,17 @@
 
       <component class="dev">
         <release tarname="gettext-0.17-1-mingw32-dev.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libstdc++-*-mingw32-*-dll-6.tar" />
+          <requires eq="mingw32-libgomp-*-mingw32-*-dll-1.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libgettextpo-%-mingw32-%-dll-0.tar" />
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
           <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
         </release>
         <release tarname="gettext-0.18.1.1-2-mingw32-dev.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libstdc++-*-mingw32-*-dll-6.tar" />
+          <requires eq="mingw32-libgomp-*-mingw32-*-dll-1.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libgettextpo-%-mingw32-%-dll-0.tar" />
           <requires ge="mingw32-libiconv-1.14-2-mingw32-*-dll-2.tar" />
           <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
@@ -114,11 +118,11 @@
 
       <component class="dll">
         <release tarname="libintl-0.17-1-mingw32-dll-8.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
         </release>
         <release tarname="libintl-0.18.1.1-2-mingw32-dll-8.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
           <requires ge="mingw32-libiconv-1.14-2-mingw32-*-dll-2.tar" />
         </release>
       </component>
@@ -159,12 +163,12 @@
 
       <component class="dll">
         <release tarname="libgettextpo-0.17-1-mingw32-dll-0.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
           <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
         </release>
         <release tarname="libgettextpo-0.18.1.1-2-mingw32-dll-0.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
           <requires ge="mingw32-libiconv-1.14-2-mingw32-*-dll-2.tar" />
           <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
         </release>
@@ -206,12 +210,12 @@
 
       <component class="dll">
         <release tarname="libasprintf-0.17-1-mingw32-dll-0.tar.lzma" >
-          <requires eq="mingw32-libstdc++-*-mingw32-dll-6.tar" />
-          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libstdc++-*-mingw32-*-dll-6.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
         </release>
         <release tarname="libasprintf-0.18.1.1-2-mingw32-dll-0.tar.lzma" >
-          <requires eq="mingw32-libstdc++-*-mingw32-dll-6.tar" />
-          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libstdc++-*-mingw32-*-dll-6.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
         </release>
       </component>
     </package>
